# BRThrusterDestroyer

./: Dockerfile  README.md
.github/workflows/: deploy.yml
app/: main.py  pyproject.toml  register_service  thrustertestloggerbase.py
app/backend/: __init__.py  app.py
app/backend/routes/: sensors.py  tests.py  thruster.py
app/frontend/: app.js  index.html
app/frontend/styles/: main.css
app/static/: extension.json  index.html  register_service
