[project]
name = "br-thruster-destroyer"
version = "0.0.1"
description = "BlueOS Thruster Testing and Data Logging Extension"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "litestar[standard]",
    "minimalmodbus",
    "gpiozero",
    "requests",
    "pyserial",
]

