[project]
name = "br-thruster-destroyer"
version = "0.0.1"
description = "BlueOS Thruster Testing and Data Logging Extension"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "minimalmodbus>=2.1.0",
    "gpiozero>=2.0.0",
    "requests>=2.31.0",
    "pyserial>=3.5.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["frontend*", "static*", "tests*"]